--- a/src/app/modules/manager/manager.component.scss
+++ b/src/app/modules/manager/manager.component.scss
@@ -105,6 +105,29 @@ input {
   }
 }
 
+#mobile-loader-button {
+  left: 50%;
+  margin: 0 -50% 0 0;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  padding: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+  button {
+    left: 50%;
+    margin: 0 -50% 0 0;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    padding: 0;
+    position: fixed;
+    width: 10em;
+    height: 5em;
+  }
+}
+
 .disabledbtn {
   opacity: .5;
 }
